# CAiD

./: .gitignore  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: publish.yml
caid/: __init__.py  _backend.py  assembly.py  compound.py  export.py  heal.py  ops.py  preview.py  primitives.py  result.py  vector.py
tests/: conftest.py  test_assembly.py  test_compound.py  test_export.py  test_heal.py  test_ops.py  test_preview.py  test_primitives.py  test_result.py
