[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caid"
version = "0.1.0"
description = "Agent-friendly CadQuery/OCCT abstraction layer with validated geometry operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Adam Steen"},
  {name = "Claude (Anthropic)", email = "noreply@anthropic.com"},
]

dependencies = [
  "cadquery>=2.4.0",
  "trimesh>=4.4",
  "pyrender>=0.1.45",
  "Pillow>=10.0",
  "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
